# matrix

./: Vector.py  linear_combination.py  main.py  pyproject.toml
src/: __init__.py  main.py
src/common/: Matrix.py  Vector.py  __init__.py
src/ex00/: main.py
src/ex01/: linear_combination.py  main.py
src/ex02/: linear_interpolation.py  main.py
src/ex03/: main.py
src/ex04/: main.py
src/ex05/: angle_cos.py  main.py
src/ex06/: cross_product.py  main.py
src/ex07/: main.py
src/ex08/: main.py
src/ex09/: main.py
