[project]
name = "matrix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "sympy>=1.14.0",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
explicit_package_bases = true
